# skydel-remote-api

Python/: dev-requirements.txt  invoke.yaml  pyproject.toml  readme.md  setup.cfg  setup.py  tasks.py
Python/skydelsdx/: client.py  clientcmd.py  clienthil.py  commandfactory.py  exceptions.py  remotesimulator.py  units.py
Python/tests/: test_units.py
